# veloran

./: .env.example  .gitignore  CLAUDE.md  package-lock.json  package.json  tsconfig.json
anchor/: Anchor.toml
anchor/programs/veloran-paywall/: Cargo.toml
anchor/programs/veloran-paywall/src/: lib.rs
app/: layout.tsx  page.tsx
app/api/earnings/: route.ts
app/api/me/: route.ts
app/api/posts/: route.ts
app/api/posts/[id]/: route.ts
app/api/preview/: route.ts
app/api/subscription-tiers/: route.ts
app/api/subscriptions/[creatorId]/: route.ts
app/api/unlock/[slug]/: route.ts
app/api/x402/[slug]/: route.ts
app/c/[address]/: page.tsx
app/demo/: page.tsx
app/dev/send-usdc/: page.tsx
app/for-agents/: page.tsx
app/p/[slug]/: page.tsx
app/post/new/: page.tsx
components/: AuthRefresh.tsx  CreatorTierEditor.tsx  DashboardClient.tsx  LoginButton.tsx  NewPostClient.tsx  PaywallGate.tsx  Providers.tsx  SendUsdcClient.tsx  SubscribeButton.tsx  SubscribeOptions.tsx  UnlockButton.tsx
docs/: demo-script.md  pitch-deck.md  x402-spike.md
docs/specs/: 2026-04-28-wallet-signin-verification.md
lib/: anchor-client.ts  content-gate.ts  privy-server.ts  slug.ts  solana.ts  x402.ts
lib/idl/: veloran_paywall.json
prisma/: schema.prisma
prisma/migrations/20260420162738_init/: migration.sql
scripts/: ai-reader.ts
