[package]
name = "veloran-paywall"
version = "0.1.0"
description = "Veloran 95/5 paywall split program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "veloran_paywall"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
